--- a/src/main/resources/ui/Main.fxml
+++ b/src/main/resources/ui/Main.fxml
@@ -191,22 +191,18 @@
                <children>
                   <VBox spacing="10.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <VBox>
+                        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Treningslogg" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <HBox spacing="10.0">
                            <children>
-                              <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Treningslogg" textAlignment="CENTER">
-                                 <font>
-                                    <Font name="System Bold" size="12.0" />
-                                 </font>
-                              </Label>
-                              <HBox spacing="10.0">
-                                 <children>
-                                    <Label maxHeight="1.7976931348623157E308" text="Viser" />
-                                    <JFXTextField fx:id="workoutCountTextField" alignment="CENTER" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" prefWidth="40.0" />
-                                    <Label layoutX="145.0" layoutY="10.0" maxHeight="1.7976931348623157E308" text="siste treningsøkter." />
-                                 </children>
-                              </HBox>
+                              <Label maxHeight="1.7976931348623157E308" text="Viser" />
+                              <JFXTextField fx:id="workoutCountTextField" alignment="CENTER" focusColor="#454545" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" prefWidth="40.0" />
+                              <Label layoutX="145.0" layoutY="10.0" maxHeight="1.7976931348623157E308" text="siste treningsøkter." />
                            </children>
-                        </VBox>
+                        </HBox>
                         <JFXTreeTableView fx:id="workoutLogTreeTableView" fixedCellSize="35.0" VBox.vgrow="ALWAYS">
                            <columns>
                               <TreeTableColumn fx:id="workoutLogIDColumn" prefWidth="75.0" text="ID" />
@@ -253,7 +249,7 @@
                                     <JFXTimePicker fx:id="startTimePicker" defaultColor="#454545" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" GridPane.columnIndex="2" />
                                     <JFXDatePicker fx:id="endDatePicker" defaultColor="#454545" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                     <JFXTimePicker fx:id="endTimePicker" defaultColor="#454545" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                                    <JFXComboBox fx:id="exerciseComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+                                    <JFXComboBox fx:id="exerciseComboBox" focusColor="#454545" maxHeight="20.0" maxWidth="1.7976931348623157E308" minHeight="20.0" prefHeight="20.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
                                        <GridPane.margin>
                                           <Insets right="5.0" />
                                        </GridPane.margin>
@@ -279,6 +275,29 @@
                               <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </JFXTreeTableView>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+                  <VBox layoutX="10.0" layoutY="10.0" spacing="10.0">
+                     <children>
+                        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Relaterte øvelser" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <StackPane>
+                           <children>
+                              <HBox spacing="10.0" StackPane.alignment="CENTER">
+                                 <children>
+                                    <Label maxHeight="1.7976931348623157E308" text="Angi øvelsesgruppe:" />
+                                    <JFXComboBox fx:id="relatedExerciseGroupComboBox" focusColor="#454545" maxHeight="20.0" maxWidth="1.7976931348623157E308" minHeight="20.0" prefHeight="20.0" prefWidth="150.0" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </StackPane>
+                        <JFXListView fx:id="relatedExerciseGroupListView" fixedCellSize="35.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="400.0" />
                      </children>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
